tests/ui/mir/issue-102389.stderr
error[E0507]: cannot move out of `*inbounds` which is behind a shared reference
  --> $DIR/issue-102389.rs:4:11
   |
LL |     array[*inbounds as usize]
   |           ^^^^^^^^^ move occurs because `*inbounds` has type `Enum`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
